form-runner/jvm/src/main/assets/xbl/orbeon/fields-date/fields-date.less
@import (reference) "../../../../../../../../bootstrap-src/less/variables";

.xbl-fr-fields-date {

    // Don't let the add-on gap apply here (special case with multi-field control)
    --orbeon-add-on-gap: 0;

    .fr-component-group {
        display: inline-block;
        img { vertical-align: middle; }
        .xforms-input {

            // All the inputs on the same line
            display: inline-block;

            // Don't show placeholders as they are too large and get truncated
            input::placeholder {
                color: transparent;
            }
            // By default, don't show labels, but don't hide to screen readers
            // Particularly strong rule for Form Builder, to override its `display: table`
            .fr-view &.xforms-control .xforms-label, // add `.fr-view` because `.fr-density-*` on that same element has a `display` property and we need to override it
            .fb-main .fb &.xforms-control .xforms-label {
                // #7679: same technique used in Bootstrap 5's .visually-hidden class/mixin ("Hide content visually
                // while keeping it accessible to assistive technologies")
                width      : 1px;
                height     : 1px;
                padding    : 0;
                margin     : -1px;
                overflow   : hidden;
                clip       : rect(0, 0, 0, 0);
                white-space: nowrap;
                border     : 0;
                position   : absolute;
            }
        }
        .xbl-fr-date {
            input { display: none ; }
            display: inline-block;
            // No need for a vertical-align here, as .add-on now matches the inputs' height via @fluidControlHeight
            .add-on {
                border-radius: var(--orbeon-add-on-border-radius);
            }
        }
    }

    // For use outside of Form Runner
    .fr-width-2digits .xforms-input-input { width: 30px }
    .fr-width-4digits .xforms-input-input { width: 47px }
}

